--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,6 +14,9 @@
 /SpriteBuilder.class
 /Target.class
 /Window.class
-/Rocket.class
-/RocketBllt.class
+/.classpath
+/.gitignore
+/.project
+/GamePadInput.class
 /image/
+/Bomb.class
