--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,10 @@
-/P2.class
 /AnimationSprite.class
 /Block.class
-/.classpath
-/.project
-/AnimationSprite.class
-/Block.class
-/Boton.class
 /Bullet.class
 /CachedSprite.class
 /Chracter.class
 /Game.class
 /GameObject.class
-/GamePadInput.class
-/HUD.class
 /Handler.class
 /KeyInput.class
 /Launcher.class
@@ -22,13 +14,12 @@
 /SpriteBuilder.class
 /Target.class
 /Window.class
-/AudioPlayer.class
+/Boton.class
+/GamePadInput.class
 /Menu.class
-/image/
 /MenuPanel.class
-/Player.class
 /Rocket.class
 /RocketBllt.class
-/SpriteBuilder.class
-/Target.class
-/Window.class
+/.gitignore
+/HUD.class
+/image/
