¡Optimización #1 del juego!
1) El código está depurado
2) Los menús están optimizados
3) La rama de Coki está integrada

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -20,8 +20,8 @@
 /MenuPanel.class
 /Rocket.class
 /RocketBllt.class
-/image/
-/Player2.class
-/Player1.class
 /Character.class
-/AudioPlayer.class
+/HUD.class
+/Player1.class
+/Player2.class
+/image/
