[RISK] Loop music

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -20,5 +20,16 @@
 /MenuPanel.class
 /Rocket.class
 /RocketBllt.class
-/image/
 /AudioPlayer.class
+/HUD.class
+/JustRight.class
+/Lava.class
+/LittleBitLeft.class
+/LittleBitRight.class
+/P2.class
+/StatesLava.class
+/Volcano.class
+/.classpath
+/.gitignore
+/.project
+/image/
