--- a/src/.gitignore
+++ b/src/.gitignore
@@ -20,3 +20,12 @@
 /MenuPanel.class
 /Rocket.class
 /RocketBllt.class
+/AudioPlayer.class
+/HUD.class
+/JustRight.class
+/Lava.class
+/LittleBitLeft.class
+/LittleBitRight.class
+/P2.class
+/StatesLava.class
+/Volcano.class
