Terminar Partida en desarrollo
1) Trabajo con Pausar Partida
2) Trabajo con Terminar Partida

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -25,3 +25,10 @@
 /Player1.class
 /Player2.class
 /image/
+/JustRight.class
+/Lava.class
+/LittleBitLeft.class
+/LittleBitRight.class
+/StatesLava.class
+/Volcano.class
+/Victoria.class
